Closed Bug 1547871 Opened 5 years ago Closed 5 years ago

Intermittent PROCESS-CRASH | Main app process exited normally | application crashed [@ mozilla::dom::BrowsingContext::Detach(bool)]

Categories

(Core Graveyard :: Plug-ins, defect)

defect
Not set
critical

Tracking

(Fission Milestone:M4, firefox-esr60 unaffected, firefox66 unaffected, firefox67 unaffected, firefox68 fixed)

RESOLVED FIXED
mozilla68
Fission Milestone M4
Tracking Status
firefox-esr60 --- unaffected
firefox66 --- unaffected
firefox67 --- unaffected
firefox68 --- fixed

People

(Reporter: intermittent-bug-filer, Assigned: farre)

References

(Regression)

Details

(Keywords: crash, intermittent-failure, regression, Whiteboard: [stockwell needswork:owner])

Crash Data

Attachments

(1 file)

Filed by: nbeleuzu [at] mozilla.com
Parsed log: https://treeherder.mozilla.org/logviewer.html#?job_id=243452189&repo=autoland
Full log: https://queue.taskcluster.net/v1/task/YpUm0yV4QzqKRlbUsMLPWA/runs/0/artifacts/public/logs/live_backing.log


[task 2019-04-29T22:56:44.147Z] 22:56:44 INFO - mozcrash Downloading symbols from: https://queue.taskcluster.net/v1/task/X157ozqySqu-rBdZwR2Q_w/artifacts/public/build/target.crashreporter-symbols.zip
[task 2019-04-29T22:56:48.250Z] 22:56:48 INFO - mozcrash Copy/paste: /builds/worker/workspace/build/linux64-minidump_stackwalk /tmp/tmpHSK3IT.mozrunner/minidumps/7eee66b1-27f9-2423-f18d-47435c8b3247.dmp /tmp/tmplNllNI
[task 2019-04-29T22:56:53.779Z] 22:56:53 INFO - mozcrash Saved minidump as /builds/worker/workspace/build/blobber_upload_dir/7eee66b1-27f9-2423-f18d-47435c8b3247.dmp
[task 2019-04-29T22:56:53.780Z] 22:56:53 INFO - mozcrash Saved app info as /builds/worker/workspace/build/blobber_upload_dir/7eee66b1-27f9-2423-f18d-47435c8b3247.extra
[task 2019-04-29T22:56:53.846Z] 22:56:53 INFO - PROCESS-CRASH | Main app process exited normally | application crashed [@ mozilla::dom::BrowsingContext::Detach(bool)]
[task 2019-04-29T22:56:53.846Z] 22:56:53 INFO - Crash dump filename: /tmp/tmpHSK3IT.mozrunner/minidumps/7eee66b1-27f9-2423-f18d-47435c8b3247.dmp
[task 2019-04-29T22:56:53.847Z] 22:56:53 INFO - Operating system: Linux
[task 2019-04-29T22:56:53.848Z] 22:56:53 INFO - 0.0.0 Linux 4.4.0-1014-aws #14taskcluster1-Ubuntu SMP Tue Apr 3 10:27:00 UTC 2018 x86_64
[task 2019-04-29T22:56:53.849Z] 22:56:53 INFO - CPU: x86
[task 2019-04-29T22:56:53.850Z] 22:56:53 INFO - GenuineIntel family 6 model 62 stepping 4
[task 2019-04-29T22:56:53.851Z] 22:56:53 INFO - 2 CPUs
[task 2019-04-29T22:56:53.852Z] 22:56:53 INFO -
[task 2019-04-29T22:56:53.853Z] 22:56:53 INFO - GPU: UNKNOWN
[task 2019-04-29T22:56:53.853Z] 22:56:53 INFO -
[task 2019-04-29T22:56:53.854Z] 22:56:53 INFO - Crash reason: SIGSEGV /SEGV_MAPERR
[task 2019-04-29T22:56:53.855Z] 22:56:53 INFO - Crash address: 0x40
[task 2019-04-29T22:56:53.856Z] 22:56:53 INFO - Process uptime: not available
[task 2019-04-29T22:56:53.857Z] 22:56:53 INFO -
[task 2019-04-29T22:56:53.858Z] 22:56:53 INFO - Thread 0 (crashed)
[task 2019-04-29T22:56:53.859Z] 22:56:53 INFO - 0 libxul.so!mozilla::dom::BrowsingContext::Detach(bool) [BrowsingContext.cpp:fa6be110a460610cfa89efcfeda08d9d57e4915b : 286 + 0x3]
[task 2019-04-29T22:56:53.859Z] 22:56:53 INFO - eip = 0xf24ae1d2 esp = 0xfff241a0 ebp = 0xfff241e8 ebx = 0xf5313000
[task 2019-04-29T22:56:53.860Z] 22:56:53 INFO - esi = 0xe6e0e080 edi = 0x00000005 eax = 0x00000000 ecx = 0x0000002f
[task 2019-04-29T22:56:53.861Z] 22:56:53 INFO - edx = 0xe6e23680 efl = 0x00210202
[task 2019-04-29T22:56:53.862Z] 22:56:53 INFO - Found by: given as instruction pointer in context

Andreas please take a look at this, failure rate is high, there are 41 total failures since April 29th, on linux32-shippable and linux64-shippable opt.

Recent failure log: https://treeherder.mozilla.org/logviewer.html#/jobs?job_id=243895022&repo=autoland&lineNumber=17115

[task 2019-05-01T11:15:54.894Z] 11:15:54 INFO - TEST-START | devtools/client/inspector/markup/test/browser_markup_whitespace.js
[task 2019-05-01T11:15:54.894Z] 11:15:54 INFO - Entering test bound
[task 2019-05-01T11:15:54.895Z] 11:15:54 INFO - Adding a new tab with URL: http://example.com/browser/devtools/client/inspector/markup/test/doc_markup_whitespace.html
[task 2019-05-01T11:15:54.993Z] 11:15:54 INFO - Tab added and finished loading
[task 2019-05-01T11:15:54.994Z] 11:15:54 INFO - Opening the inspector
[task 2019-05-01T11:15:54.994Z] 11:15:54 INFO - Opening the toolbox
[task 2019-05-01T11:15:55.658Z] 11:15:55 INFO - GECKO(2553) | console.log: "[DISPATCH] action type:" "UPDATE_GRIDS"
[task 2019-05-01T11:15:55.666Z] 11:15:55 INFO - GECKO(2553) | console.log: "[DISPATCH] action type:" "CLEAR_FLEXBOX"

[task 2019-05-01T11:15:56.489Z] 11:15:56 INFO - Tab removed and finished closing
[task 2019-05-01T11:15:56.511Z] 11:15:56 INFO - GECKO(2553) | MEMORY STAT | vsize 3832MB | residentFast 496MB | heapAllocated 164MB
[task 2019-05-01T11:15:56.513Z] 11:15:56 INFO - TEST-OK | devtools/client/inspector/markup/test/browser_markup_whitespace.js | took 1624ms
[task 2019-05-01T11:15:56.550Z] 11:15:56 INFO - checking window state

[task 2019-05-01T11:16:10.216Z] 11:16:10 INFO - PROCESS-CRASH | Main app process exited normally | application crashed [@ mozilla::dom::BrowsingContext::Detach(bool)]
[task 2019-05-01T11:16:10.216Z] 11:16:10 INFO - Crash dump filename: /tmp/tmp1b0XiH.mozrunner/minidumps/20098552-c00b-89a0-ae77-422fb8e96f43.dmp
[task 2019-05-01T11:16:10.217Z] 11:16:10 INFO - Operating system: Linux
[task 2019-05-01T11:16:10.217Z] 11:16:10 INFO - 0.0.0 Linux 4.4.0-1014-aws #14taskcluster1-Ubuntu SMP Tue Apr 3 10:27:00 UTC 2018 x86_64
[task 2019-05-01T11:16:10.217Z] 11:16:10 INFO - CPU: amd64
[task 2019-05-01T11:16:10.217Z] 11:16:10 INFO - family 6 model 62 stepping 4
[task 2019-05-01T11:16:10.217Z] 11:16:10 INFO - 2 CPUs
[task 2019-05-01T11:16:10.217Z] 11:16:10 INFO -
[task 2019-05-01T11:16:10.217Z] 11:16:10 INFO - GPU: UNKNOWN
[task 2019-05-01T11:16:10.217Z] 11:16:10 INFO -
[task 2019-05-01T11:16:10.217Z] 11:16:10 INFO - Crash reason: SIGSEGV /SEGV_MAPERR
[task 2019-05-01T11:16:10.217Z] 11:16:10 INFO - Crash address: 0x70
[task 2019-05-01T11:16:10.217Z] 11:16:10 INFO - Process uptime: not available
[task 2019-05-01T11:16:10.217Z] 11:16:10 INFO -
[task 2019-05-01T11:16:10.217Z] 11:16:10 INFO - Thread 0 (crashed)
[task 2019-05-01T11:16:10.218Z] 11:16:10 INFO - 0 libxul.so!mozilla::dom::BrowsingContext::Detach(bool) [BrowsingContext.cpp:6a3c75d8e68ad9e84c8f41f1accae69e13dd1210 : 282 + 0x5]
[task 2019-05-01T11:16:10.218Z] 11:16:10 INFO - rax = 0x0000000000000000 rdx = 0x00007fcf8503c840
[task 2019-05-01T11:16:10.219Z] 11:16:10 INFO - rcx = 0x0000000000000017 rbx = 0x0000000000000001
[task 2019-05-01T11:16:10.219Z] 11:16:10 INFO - rsi = 0x0000000000000000 rdi = 0x00007fcf8feb8a30
[task 2019-05-01T11:16:10.219Z] 11:16:10 INFO - rbp = 0x00007ffd6fe53bb0 rsp = 0x00007ffd6fe53b60
[task 2019-05-01T11:16:10.220Z] 11:16:10 INFO - r8 = 0x0000000000000000 r9 = 0x0000000000000000
[task 2019-05-01T11:16:10.220Z] 11:16:10 INFO - r10 = 0x00007fcfa8000180 r11 = 0x0000000000000001
[task 2019-05-01T11:16:10.220Z] 11:16:10 INFO - r12 = 0x00007fcf84f56100 r13 = 0x00007fcf84f05800
[task 2019-05-01T11:16:10.220Z] 11:16:10 INFO - r14 = 0x0000000000000000 r15 = 0x0000000000000000
[task 2019-05-01T11:16:10.221Z] 11:16:10 INFO - rip = 0x00007fcf9b72c90a
[task 2019-05-01T11:16:10.221Z] 11:16:10 INFO - Found by: given as instruction pointer in context
[task 2019-05-01T11:16:10.221Z] 11:16:10 INFO - 1 libxul.so!nsDocShell::Destroy() [nsDocShell.cpp:6a3c75d8e68ad9e84c8f41f1accae69e13dd1210 : 5033 + 0xe]
[task 2019-05-01T11:16:10.222Z] 11:16:10 INFO - rbx = 0x0000000000000001 rbp = 0x00007ffd6fe53c10
[task 2019-05-01T11:16:10.222Z] 11:16:10 INFO - rsp = 0x00007ffd6fe53bc0 r12 = 0x00007fcf84f30880
[task 2019-05-01T11:16:10.222Z] 11:16:10 INFO - r13 = 0x00007fcf84f05800 r14 = 0x0000000200000001
[task 2019-05-01T11:16:10.222Z] 11:16:10 INFO - r15 = 0x0000000000000000 rip = 0x00007fcf9b73760a
[task 2019-05-01T11:16:10.223Z] 11:16:10 INFO - Found by: call frame info
[task 2019-05-01T11:16:10.223Z] 11:16:10 INFO - 2 libxul.so!nsWebBrowser::SetDocShell(nsIDocShell*) [nsWebBrowser.cpp:6a3c75d8e68ad9e84c8f41f1accae69e13dd1210 : 1238 + 0x6]
[task 2019-05-01T11:16:10.223Z] 11:16:10 INFO - rbx = 0x00007fcf8d078820 rbp = 0x00007ffd6fe53c90
[task 2019-05-01T11:16:10.224Z] 11:16:10 INFO - rsp = 0x00007ffd6fe53c20 r12 = 0x00007fcf84f02800
[task 2019-05-01T11:16:10.224Z] 11:16:10 INFO - r13 = 0x0000000000000000 r14 = 0x00007fcf8d078820
[task 2019-05-01T11:16:10.224Z] 11:16:10 INFO - r15 = 0x00007fcf84f05988 rip = 0x00007fcf9a0aa81c
[task 2019-05-01T11:16:10.225Z] 11:16:10 INFO - Found by: call frame info
[task 2019-05-01T11:16:10.225Z] 11:16:10 INFO - 3 libxul.so!nsWebBrowser::InternalDestroy() [nsWebBrowser.cpp:6a3c75d8e68ad9e84c8f41f1accae69e13dd1210 : 192 + 0xa]
[task 2019-05-01T11:16:10.225Z] 11:16:10 INFO - rbx = 0x00007fcf8d078820 rbp = 0x00007ffd6fe53cb0
[task 2019-05-01T11:16:10.226Z] 11:16:10 INFO - rsp = 0x00007ffd6fe53ca0 r12 = 0x00007fcf84f02800
[task 2019-05-01T11:16:10.226Z] 11:16:10 INFO - r13 = 0x00007fcf84f34240 r14 = 0x00007fcf84f56100
[task 2019-05-01T11:16:10.226Z] 11:16:10 INFO - r15 = 0x00007fcf84f02800 rip = 0x00007fcf9a0aa08f
[task 2019-05-01T11:16:10.226Z] 11:16:10 INFO - Found by: call frame info
[task 2019-05-01T11:16:10.227Z] 11:16:10 INFO - 4 libxul.so!non-virtual thunk to nsWebBrowser::Destroy() [nsWebBrowser.cpp:6a3c75d8e68ad9e84c8f41f1accae69e13dd1210 : 0 + 0xd]
[task 2019-05-01T11:16:10.227Z] 11:16:10 INFO - rbx = 0x00007fcfa7f273c0 rbp = 0x00007ffd6fe53cc0
[task 2019-05-01T11:16:10.227Z] 11:16:10 INFO - rsp = 0x00007ffd6fe53cc0 r12 = 0x00007fcf84f02800
[task 2019-05-01T11:16:10.228Z] 11:16:10 INFO - r13 = 0x00007fcf84f34240 r14 = 0x00007fcf84f56100
[task 2019-05-01T11:16:10.228Z] 11:16:10 INFO - r15 = 0x00007fcf84f02800 rip = 0x00007fcf9b79b06d
[task 2019-05-01T11:16:10.228Z] 11:16:10 INFO - Found by: call frame info
[task 2019-05-01T11:16:10.228Z] 11:16:10 INFO - 5 libxul.so!mozilla::dom::BrowserChild::DestroyWindow() [BrowserChild.cpp:6a3c75d8e68ad9e84c8f41f1accae69e13dd1210 : 981 + 0xf]
[task 2019-05-01T11:16:10.229Z] 11:16:10 INFO - rbx = 0x00007fcfa7f273c0 rbp = 0x00007ffd6fe53d20
[task 2019-05-01T11:16:10.229Z] 11:16:10 INFO - rsp = 0x00007ffd6fe53cd0 r12 = 0x00007fcf84f02800
[task 2019-05-01T11:16:10.229Z] 11:16:10 INFO - r13 = 0x00007fcf84f34240 r14 = 0x00007fcf84f56100
[task 2019-05-01T11:16:10.229Z] 11:16:10 INFO - r15 = 0x00007fcf84f02800 rip = 0x00007fcf99154f51
[task 2019-05-01T11:16:10.230Z] 11:16:10 INFO - Found by: call frame info

Flags: needinfo?(afarre)
Regressed by: 1533447
Assignee: nobody → afarre
Flags: needinfo?(afarre)

Adding a similar signature that also seems to have been regressed by Bug 1533447.

Crash Signature: [@ mozilla::dom::BrowsingContext::Detach(bool)] → [@ mozilla::dom::BrowsingContext::Detach(bool)] [@ PLDHashTable::Search | mozilla::dom::BrowsingContext::Detach]
Attachment #9062204 - Attachment description: Bug 1547871 - BrowsingContext needs a group to evict from cache. r=peterv → Bug 1547871 - BrowsingContext needs a group to evict from cache. r=neha
Pushed by afarre@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/42a61320b49b
BrowsingContext needs a group to evict from cache. r=neha
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla68

Retroactively moving fixed bugs whose summaries mention "Fission" (or other Fission-related keywords) but are not assigned to a Fission Milestone to an appropriate Fission Milestone.

This will generate a lot of bugmail, so you can filter your bugmail for the following UUID and delete them en masse:

0ee3c76a-bc79-4eb2-8d12-05dc0b68e732

Fission Milestone: --- → M4
Has Regression Range: --- → yes
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: