Bug 1547871 - BrowsingContext needs a group to evict from cache. r=neha

Differential Revision: https://phabricator.services.mozilla.com/D29669

--HG--
extra : moz-landing-system : lando